--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "libp2p-circuit": "~0.3.0",
     "libp2p-delegated-content-routing": "~0.2.2",
     "libp2p-delegated-peer-routing": "~0.2.2",
-    "libp2p-kad-dht": "~0.14.2",
+    "libp2p-kad-dht": "libp2p/js-libp2p-kad-dht#feat/emit-event-on-peer-connected",
     "libp2p-mdns": "~0.12.0",
     "libp2p-mplex": "~0.8.4",
     "libp2p-secio": "~0.11.0",
